# video-downloader

./: README.md  db.sqlite3  output.css  pyproject.toml  requirements.txt
config/: __init__.py  celery.py  settings.py  urls.py
downloader/: helper.py  tasks.py  urls.py  views.py
downloader/static/downloader/: main.js
downloader/templates/downloader/: base.html  home.html
downloader/templates/partials/: download_error.html  download_success.html  error_alert.html  messages.html  preview_card.html  progress_bar.html  test.html  translated_text.html
downloads/: Age doesn't matter ,girls will be girls 🤣🤌 #funny.webm
static/src/: output.css
staticfiles/css/: main.css
staticfiles/downloader/: main.js
staticfiles/js/: main.js
staticfiles/src/: input.css
theme/static_src/src/: styles.css
users/: models.py
users/migrations/: 0001_initial.py
