[project]
name = "video-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "celery-progress>=0.5",
    "cookiecutter>=2.6.0",
    "django>=5.2.3",
    "django-browser-reload>=1.18.0",
    "django-celery-results>=2.6.0",
    "django-environ>=0.12.0",
    "django-htmx>=1.23.0",
    "django-tailwind>=4.0.1",
    "ffmpeg>=1.4",
    "openai>=1.88.0",
    "openai-whisper>=20250625",
    "psycopg2-binary>=2.9.10",
    "pytube>=15.0.0",
    "redis>=6.2.0",
    "whisper>=1.1.10",
    "yt-dlp>=2025.6.9",
]
