[project]
name = "video-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "celery-progress>=0.5",
    "cookiecutter>=2.6.0",
    "django>=5.2.3",
    "django-browser-reload>=1.18.0",
    "django-celery-results>=2.6.0",
    "django-environ>=0.12.0",
    "django-htmx>=1.23.0",
    "faster-whisper>=1.2.1",
    "ffmpeg>=1.4",
    "gunicorn>=25.3.0",
    "httpx==0.27.0",
    "openai>=2.30.0",
    "openai-whisper>=20250625",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.2.1",
    "pytube>=15.0.0",
    "redis>=6.2.0",
    "whisper>=1.1.10",
    "whitenoise>=6.12.0",
    "yt-dlp>=2025.6.9",
]
